# WickedEngine-Demo

./: .buildconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CREDITS.md  LICENSE  LICENSE.md  README.md
.github/: FUNDING.yml
.github/workflows/: cmake.yml
Assets/: Scripts
Assets/Characters/Wicky/: Wicky.blend
Assets/Props/: Primitives.blend
Assets/Scenes/: World.blend  World.wiscene
Data/: LICENSE.md
Data/Content/Shared/: BGM_Test.assetmeta  Grid - Albedo.assetmeta  Grid - Albedo.ktx2
Data/Editor/Instances/: Kimi.instlist
Data/Editor/UI/: MaterialBall.bscn
Data/Scene/: Kimi.assetmeta  Kimi.bscn
Documents/: npc_overview_concept.md
Source/: BindLua.cpp  BindLua.h  BindLua_Globals.h  CMakeLists.txt  Config.cpp  Config.h  Core.cpp  Core.h  Dev.cpp  Dev.h  Dev_IO_GLTF.cpp  Dev_LiveUpdate.cpp  Editor.cpp  Editor.h  Editor_IO_GLTF.cpp  Editor_Translator.cpp  Editor_Translator.h  Filesystem.cpp  Filesystem.h  Game.cpp  Game.h  Game.rc  Gameplay.cpp  Gameplay.h  LiveUpdate.cpp  LiveUpdate.h  RenderPipeline.cpp  RenderPipeline.h  Resources.cpp  Resources.h  Resources_BindLua.cpp  Resources_BindLua.h  Resources_LiveUpdate.cpp  Resources_SceneObject.cpp  Scene.cpp  Scene.h  Scene_BindScript.cpp  Scene_BindScript.h  Scripting.cpp  Scripting.h  (+7 more)
Source/Building/: .gitattributes  Build.py  Build.sh
Source/Distribution/: Icon.h  wicked-engine-demo.desktop  wicked-engine-demo.sh
Source/Gameplay/: Camera.cpp  Camera.h  Components.cpp  Components.h  Components_BindScript.cpp  Components_BindScript.h  GBus.h  GameplayAgencyControl.cpp  GameplayAgencyControl.h  Helpers.cpp  Helpers.h  HitProcessor.cpp  HitProcessor.h  Hook.cpp  Hook.h  Player.cpp  Player.h  Projectile.cpp  Projectile.h
Source/ImGui/: imgui_BindLua.cpp  imgui_BindLua.h  imgui_iterator.h
Source/ImGui/Widgets/: ImGuizmo.cpp  ImGuizmo.h  ImGuizmo_Converter.cpp  ImGuizmo_Converter.h
Source/Scripts/: startup.lua
Source/Scripts/Initialisation/: startup.lua
Source/Scripts/Root/: editor.lua  startup.lua
Tools/KTX-Software/: version.txt
Tools/KTX-Software/linux/lib/: libktx.so.4  libktx.so.4.2.1
